--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/morgan": "^1.9.10",
     "@types/nodemailer": "^7.0.4",
+    "antd": "^6.1.1",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "chalk": "^5.6.2",
